Fix dividend payments in foreign currency.

This was introduced in a previous revision when the call to
InvestTransactionEditor::setupPrice (which takes care of conversions)
was incorrectly removed for the Dividend and Interest income
investment transactions. Only these transactions were affected by
this bug.

BUG: 337162
(cherry picked from commit 3cb1f8f3aa4851f46245003da03a01fb033a119e)